fix the intro text align

--- a/src/app/components/intro/intro-2020-winter/intro-2020-winter.component.scss
+++ b/src/app/components/intro/intro-2020-winter/intro-2020-winter.component.scss
@@ -59,6 +59,7 @@ p {
   opacity: .3;
   color: $white;
   margin-top: 20px;
+  text-align: center;
 }
 
 // text space
